[metadata]
name = exchecks
version = 0.0.0
description = Python package to track long running executions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen
author_email = daniel.kastinen@irf.se
license = MIT
license_files = LICENSE
readme = README.md
homepage = https://github.com/danielk333/exchecks
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options.entry_points]
console_scripts = 
    exchecks = exchecks.cli:main

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    tornado >= 6.2
    psutil >= 5.9.4